adding script file. this file is to give an animation to our slides

--- a/mystyle.css
+++ b/mystyle.css
@@ -115,3 +115,5 @@
 #radio4:checked ~ .auto-navigation .auto-btn {
     background-color: blue;
 } 
+
+/* hell yah!! i think we're done to design our style. feel free to change it like what you want! */
